fix tournament layout issues
border-bottom for link didn’t show in safari, spacers rendered after
bronze finals

--- a/app/assets/stylesheets/tournaments.css
+++ b/app/assets/stylesheets/tournaments.css
@@ -19,7 +19,7 @@
 .qualification-table a {
   color: rgb(51, 51, 51);
   border-bottom-style: dotted;
-  border-bottom-width: 1px;
+  border-bottom-width: 1.1px;
 }
 
 .tournament-competitor a:hover,
